<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GimVic</string>
    <string name="action_settings">Nastavitve</string>
    <string name="hello">Pozdravljeni!</string>
    <string name="about_gimvic">Aplikacija GimVic vam bo pomagala, da boste vedno na tekočem glede morebitnih nadomeščanj v naslednjih dneh. Namesto vas jih bo preverjala in vas nanje opozorila.</string>
    <string name="action_refresh">Osveži</string>
    <string name="title_section1">Danes</string>
    <string name="title_section2">Jutri</string>
    <string name="title_section3">Pojutrišnjem</string>
    <string name="howToRefresh">Za posodobitev podatkov povlecite navzdol.</string>
    <string name="bcg_synh">Aplikacija v ozadju samodejno preverja in posodablja podatke, da si jih lahko ogledate tudi brez internetne povezave.</string>
    <string name="prefs_demo">Prilagodite aplikacijo svojim potrebam v nastavitvah.</string>
    <string name="title_nadomescanja">Nadomeščanja</string>
    <string name="title_menjava_predmeta">Zamenjava predmeta</string>
    <string name="title_menjava_ur">Zamenjava ur</string>
    <string name="title_menjava_ucilnic">Zamenjava učilnic</string>
    <string name="string_prihodnost">V prihodnje, predvidoma v naslednjem šolskem letu, bo aplikacija izboljšana tako, da bo vezana na matično številko posameznika (EMŠO); to pomeni, da bo prikazala samo zanj pomembne podatke.</string>
    <string name="data_sending">Za izboljšanje uporabniške izkušnje aplikacija nekatere podatke anonimno pošilja razvijalcem.</string>
    <string name="set_custom_search">Aplikacijo lahko nastavite tako, da bo prikazala samo tiste podatke, v katerih se pojavlja samo določeno besedilo (npr. "3. b").</string>
    <string name="string_leave_empty">Ta razdelek lahko pustite tudi prazen.</string>
    <string name="navodila_profesorji">Profesorji vpišejo kar svoje ime ali del imena (npr. "Šemrov").</string>
    <string name="vec_filtrov">Več iskalnih filtrov nastavite tako, da jih ločite z vejico (npr. "3. b, MSOC, Šket").</string>
    <string name="title_activity_about">O aplikaciji</string>
    <string name="version">1.0.6</string>
    <string name="no_data">Ni podatkov</string>
    <string name="no_internet_connection">Ni internetne povezave</string>
    <string name="force_update_title">Obvezna posodobitev</string>
    <string name="force_update_text">Na voljo je nova obvezna posodobitev. Če je ne namestite, se bo aplikacija samodejno zaprla.</string>
    <string name="update_title">Posodobitev</string>
    <string name="update_text">Na voljo je nova posodobitev.</string>
    <string name="last_update_already_installed">Zadnja različica je že nameščena.</string>
    <string name="install">Namesti</string>
    <string name="cancle">Prekliči</string>
    <string name="ok">Ok</string>
    <string name="no">Ne</string>
    <string name="agree">Da</string>
    <string name="next">Naprej</string>
    <string name="back">Nazaj</string>
    <string name="other">Ostalo</string>
    <string name="clear_data_question">Počisti podatke?</string>
    <string name="clear_data_explanation">Izgubljeni bodo vsi podatki o nadomeščanjih.</string>
    <string name="clear_data_prefs_title">Počisti podatke</string>
    <string name="clear_data_prefs_explanation">Počisti vse nepotrebne datoteke.</string>
    <string name="set_data_filters_title">Nastavite filtriranje suplenc:</string>
    <string name="set_data_filters_text">Aplikacija bo prikazala samo podatke, ki vsebujejo vpisano besedilo. Več iskalnih filtrov lahko nastavite tako, da jih ločite z vejico.</string>
    <string name="checking">Preverjam.</string>
    <string name="data_cleared">Podatki izbrisani</string>
    <string name="author">Avtor:</string>
    <string name="author_name">Žiga Patačko Koderman</string>
    <string name="version_text">Različica:</string>
    <string name="about_app">O aplikaciji</string>
    <string name="set_data_filters">Nastavi filtriranje suplenc</string>
    <string name="check_for_update_prefs_title">Preveri posodobitve</string>
    <string name="check_for_update_prefs_explanation">Preveri za nove posodobitve.</string>
    <string name="title_activity_settings">Nastavitve</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Sinhronizacija podatkov</string>
    <string name="pref_header_notifications">Obvestila</string>
    <string name="pref_header_podatki">Osebni podatki</string>
    <string name="pref_title_new_message_notifications">Obvesti me o novih suplencah</string>
    <string name="enable_sync">Dovoli samodejno sinhronizacijo</string>
    <string name="wifi_only">Samo omrežja WiFi</string>
    <string name="wifi_only_description">Za prenos podatkov uporabi samo omrežja WiFi.</string>
    <string name="saturday">Hello world!</string>
    <string name="sunday">Hello world!</string>
    <string name="hello_world">Hello world!</string>
    <string name="working_saturday">Šola v soboto</string>
    <string name="holidays">Počitnice</string>

</resources>
